# akatsuki

./: .gitignore  ARCHITECTURE.md  README.md  TDD.md  check_cuda.py  fetch_hf_datasets.py  merge_lora.py  ohm_databuilder.py  ohm_datapreprocessor.py  ohm_distiller.py  ohm_finetuner.py  pyproject.toml  requirement-linux-amdcloud.txt  requirement-linux-cuda.txt  requirement-linux-rocm.txt  requirement-linux.txt  requirement-windows-cuda.txt  requirement-windows.txt  train_cpu_lora.py  train_cuda_lora.py  train_lora.py  vlm_scene_builder.py  walkthrough.md
hmlcore/: __init__.py  calibration.py  config.py  data.py  dense_pruner.py  graph_run.py  model.py  moe.py  prism_selector.py  quant.py  rewards.py  run.py  trainer.py
hmlcore/nodes/: NODES.md  __init__.py  base.py  context.py  grpo_node.py  input_node.py  model_info.py  output_node.py  pipeline_check.py  pruner_node.py  runner.py  sft_node.py
scripts/: finetune_config.yaml
tests/: TESTS.md  conftest.py  debug_prism_math_v2.py  test_lora_merging.py  test_ohm_pipeline.py  test_prism_selector.py
